--- a/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
+++ b/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
@@ -10,9 +10,10 @@
 
 | 修改人员 | 日期 | 修改原因 | 版本号 |
 | --- | --- | --- | --- |
-| 史创屹 | 24-04-02 | 撰写初版 |  |
-| 董天诺 | 24-04-02 | 撰写用户界面模块 |  |
-| 刘存玺 | 24-04-03 | 润色文档 |  |
+| 史创屹 | 2024-04-02 | 撰写初版 |  |
+| 董天诺 | 2024-04-02 | 撰写用户界面模块 |  |
+| 刘存玺 | 2024-04-03 | 润色文档 |  |
+| 史创屹 | 2024-04-17 | 补充查看与修改用户信息功能 | |
 
 ## **引言**
 
@@ -41,7 +42,7 @@
 ### **2.1.1 背景与机遇**
 
 - **背景**
-    
+  
     在疫情之后，国货品牌受到了更多关注和支持。消费者对国内品牌的信任度和认可度提高。
     
 - **机遇**
@@ -95,9 +96,9 @@
     - 用户注册界面：界面顶部左对齐显示标题“创建一个新的账户”。界面上显示昵称、身份、注册手机号、地址、密码和确认密码输入框，其中身份输入框通过下拉菜单选择顾客、管理人员或商家。
         - 对于管理人员的注册界面，还需要显示邀请码输入框。
         - 对于商家的注册界面，还需要显示邀请码和所属商店输入框，所属商店输入框通过下拉菜单选择所属商店。
-        
+
         界面底部显示“创建账户”和“去登录”按钮，其中“创建账户”按钮使用强调色。点击后可分别创建账户和跳转到登录界面。
-        
+    - 用户主页：页面左栏显示个人信息，用户可以查看自己身份、头像等个人信息，页面中间显示修改密码页面，显示密码和确认密码输入框。个人信息右上角显示“修改个人信息”按钮，使用强调色，点击后显示修改页面，可以修改昵称和手机号，右上角显示“更新”按钮，点击完成更新
     - 商店列表界面：界面顶部显示搜索框和搜索按钮，搜索按钮使用强调色，在搜索框中输入并点击搜索按钮可搜索商店。商店以矩形卡片方式顺序排列，宽度略小于界面宽度。对于每个卡片，左边显示正方形商店logo，右边从上到下依次显示商店名称、商店评分和商店简介，其中商店评分包括星级显示和数字显示。卡片中所有内容均左对齐。点击卡片可进入商店详情界面。页面右下角显示回顶部按钮，点击后即可回到页面顶部。
         - 对于商场管理员的商店列表界面，所有商店卡片上方显示“创建商店”按钮，宽度与一般商店卡片相同，点击后可进入创建商店详情界面。
     - 创建商店详情界面：界面顶部左对齐显示“创建商店”标题，下方从上到下依次显示商店名称和商店介绍输入框，以及商店logo上传框，可通过拖拽或点击上传图片，下方显示已上传的图片。界面右下角显示“确定创建”按钮，使用强调色，点击后，若输入的商店信息合法即可成功创建商店。
@@ -124,81 +125,109 @@
 
 - **3.2.1 用户注册 / 登录**
     - **3.2.1.1 特性描述**
-        
+      
         用户进入应用若有账号则输入昵称、手机号等信息，点击“登录”即可登录账户；若无账号则可点击“去注册”按钮，输入信息，即可创建一个用户。
         
         优先级=高
         
     - **3.2.1.2 刺激 / 相应序列**
-        
-        
+      
+      
         | 刺激 | 响应 |
         | --- | --- |
         | 用户输入信息 | 系统读取输入信息，并判断是否合法 |
         | 用户点击“登录” | 系统进入相应用户界面 |
         | 用户点击“去注册” | 系统进入新用户注册界面 |
     - **3.2.1.3 相关功能需求**
-        
-        
+      
+      
         | 功能 | 详细需求描述 |
         | --- | --- |
         | 用户输入手机号等信息 | 系统允许用户输入手机号、密码等信息并保证格式合法 |
         | 用户确定账号身份 | 系统允许用户选择账号身份，对账号身份进行检测，给予用户不同的权限 |
         | 用户输入邀请码和所属商店 | 商家、商场管理人员等需依赖邀请码注册，以防止无关人员恶意注册，保证商店经营安全 |
-- **3.2.2 创建商店**
-    - **3.2.1.1 特性描述**
+
+- **3.2.2 用户查看 / 修改个人信息**
+    - **3.2.2.1 特性描述**
+      
+        用户登陆后进入个人主页，可以查看、修改个人信息，也可以修改账户密码
         
+        优先级=中
+        
+    - **3.2.2.2 刺激 / 相应序列**
+      
+      
+        | 刺激 | 响应 |
+        | --- | --- |
+        | 用户登录 | 系统进入相应用户界面 |
+        | 用户输入密码、确认密码 | 系统读取输入信息，并判断是否合法 |
+        | 用户点击“更新” | 系统更新用户密码 |
+        | 用户点击“修改个人信息” | 系统进入修改个人信息界面 |
+        | 用户输入昵称、手机号 | 系统读取输入信息，并判断是否合法 |
+        | 用户点击“更新” | 系统更新个人信息 |
+    - **3.2.2.3 相关功能需求**
+      
+      
+        | 功能 | 详细需求描述 |
+        | --- | --- |
+        | 用户登录后查看个人信息 | 系统监测用户账号身份，为用户展示昵称、手机号、头像等个人信息，提供修改个人信息、修改密码入口 |
+        | 用户输入昵称、手机号等信息 | 系统允许用户输入昵称、手机号等信息并保证合法 |
+        | 用户输入密码 | 系统允许用户输入密码并保证格式合法 |
+
+- **3.2.3 创建商店**
+    - **3.2.3.1 特性描述**
+      
         当商场管理人员想要创建一个全新的商店时，可以在商店管理点击“创建商店”的按钮，录入商店的名字、描述、Logo后，即可创建一个新的商店。
         
         优先级=中
         
-    - **3.2.1.2 刺激 / 响应序列**
-        
-        
+    - **3.2.3.2 刺激 / 响应序列**
+      
+      
         | 刺激 | 响应 |
         | --- | --- |
         | 商店管理人员点击“创建商店” | 系统进入创建商店页面 |
         | 商店管理人员输入商店相关信息 | 系统读取输入信息，并判断是否合法 |
-    - **3.2.1.3 相关功能需求**
-        
-        
+    - **3.2.3.3 相关功能需求**
+      
+      
         | 功能 | 详细需求描述 |
         | --- | --- |
         | 商店相关人员创建商店 | 系统监测用户账号身份为商家，则提供“创建商店”按钮 |
         | 商家创建商店信息 | 系统允许商家输入商店名称、LOGO等信息，并保证商店信息合法。 |
-- **3.2.3 商品管理**
-    - **3.2.1.1 特性描述**
-        
+- **3.2.4 商品管理**
+    - **3.2.4.1 特性描述**
+      
         商家进入自己的商店，可以点击“添加商品”按钮，输入商品名称、图片等信息，即可创建商品。在商品页可以修改商品信息
         
         优先级 = 中
         
-    - **3.2.1.2 刺激 / 相应序列**
-        
-        
+    - **3.2.4.2 刺激 / 相应序列**
+      
+      
         | 刺激 | 响应 |
         | --- | --- |
         | 商店管理人员点击“添加商品”按钮 | 系统进入 |
         | 商店管理人员输入商品相关信息 | 系统读取输入信息，并判断是否合法 |
         | 商店管理人员上传商品图片 | 系统向后台传入图片信息 |
         | 商店管理人员点击“添加库存”按钮 | 系统为用户提供修改库存的接口 |
-    - **3.2.1.3 相关功能需求**
-        
-        
+    - **3.2.4.3 相关功能需求**
+      
+      
         | 功能 | 详细需求描述 |
         | --- | --- |
         | 商家创建商品 | 系统监测用户身份为商家则允许用户创建商品。允许用户输入商品相关信息，并保证信息合法。允许用户上传商品图片。 |
         | 商家管理商品 | 系统系统监测用户身份为商家则允许用户修改商品信息，修改商品库存。 |
-- **3.2.4 查看商店 / 商品**
-    - **3.2.1.1 特性描述**
-        
+- **3.2.5 查看商店 / 商品**
+    - **3.2.5.1 特性描述**
+      
         所有用户可以查看商店列表, 点击列表中的商店进入商店详情界面。
         
         优先级 = 中
         
-    - **3.2.1.2 刺激 / 相应序列**
-        
-        
+    - **3.2.5.2 刺激 / 相应序列**
+      
+      
         | 刺激 | 响应 |
         | --- | --- |
         | 用户登录 | 系统进入商店列表页 |
@@ -207,9 +236,9 @@
         | 用户点击“搜索” | 系统遍历商品列表，筛选出满足条件的商品 |
         | 用户点击商品 | 系统进入商品详情页，展示商品详情 |
         | 用户点击“回顶部” | 系统返回商店 / 商品列表顶部 |
-    - **3.2.1.3 相关功能需求**
-        
-        
+    - **3.2.5.3 相关功能需求**
+      
+      
         | 功能 | 详细需求描述 |
         | --- | --- |
         | 用户登录后查看商店 | 系统监测用户账号身份，为顾客展示商店列表；为商店管理人员提供创建商店入口。在商店列表中显示商店名称、LOGO、简介、评分等信息。 |
