--- a/文档Lab06-详细设计文档/文档Lab06-详细设计文档 d145ad1510a54d91bb4a543a9d99dad1.md
+++ b/文档Lab06-详细设计文档/文档Lab06-详细设计文档 d145ad1510a54d91bb4a543a9d99dad1.md
@@ -49,11 +49,11 @@
 
 **展示层的开发包图**
 
-![展示层开发包图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/%25E5%25B1%2595%25E7%25A4%25BA%25E5%25B1%2582%25E5%25BC%2580%25E5%258F%2591%25E5%258C%2585%25E5%259B%25BE.drawio.svg)
+![展示层开发包图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/展示层开发包图.drawio.svg)
 
 **用户页面跳转图**
 
-![页面跳转图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/%25E9%25A1%25B5%25E9%259D%25A2%25E8%25B7%25B3%25E8%25BD%25AC%25E5%259B%25BE.drawio.svg)
+![页面跳转图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/页面跳转图.drawio.svg)
 
 ### 4.1.1 userUI
 
