--- a/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
+++ b/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
@@ -10,10 +10,11 @@
 
 | 修改人员 | 日期 | 修改原因 | 版本号 |
 | --- | --- | --- | --- |
-| 史创屹 | 2024-04-02 | 撰写初版 |  |
-| 董天诺 | 2024-04-02 | 撰写用户界面模块 |  |
-| 刘存玺 | 2024-04-03 | 润色文档 |  |
-| 史创屹 | 2024-04-17 | 补充查看与修改用户信息功能 | |
+| 史创屹 | 2024-04-02 | 撰写初版 | v0.1 |
+| 董天诺 | 2024-04-02 | 撰写用户界面模块 | v1.0 |
+| 刘存玺 | 2024-04-03 | 润色文档 | v1.1 |
+| 史创屹 | 2024-04-17 | 补充查看与修改用户信息功能 | v1.2 |
+| 刘存玺 | 2024-06-01 | 根据开发需求更新功能需求以及数据需求 | v2.0 |
 
 ## **引言**
 
@@ -52,17 +53,20 @@
 
 ### **2.1.2 业务需求**
 
-- 用户可以登录、注册、查看与修改个人信息。
-- 商场管理人员可以创建商店。
-- 门店工作人员可以创建商品、添加库存。
-- 用户可以查看商店信息，可以查看商店下的所有商品。
-- 用户可以根据关键词搜索商品。
+- 用户能得到良好的线下自提以及线上邮寄的网购体验
+- 商场管理人员和门店工作人员能够对商店商品进行有效的管理
+- CEO和门店工作人员能够管理经营状况
 
 ### **2.2 项目功能**
 
-- 商品浏览和搜索功能：用户可以浏览各类国货产品，并通过关键词搜索、分类筛选等方式快速找到所需商品。
-- 商品详情页：展示商品详细信息，包括价格、规格、图片、用户评价等，帮助用户做出购买决策。
 - 用户账户管理功能：用户可以注册账户、登录、修改个人信息等。
+
+- 商品浏览功能：用户可以浏览各类商品，并通过关键词搜索、分类筛选、排序等方式快速找到所需商品。
+- 商品详情页：展示商品详细信息，包括价格、规格、图片、用户评价等，帮助用户做出购买决策。
+- 订单功能：用户可以对满意的商品进行下单并支付，对订单进行一系列确认，最终对订单做出评价
+- 商品商店管理功能：用户可以管理其所在商店，包括创建商品等功能
+- 优惠券功能：用户可以创建优惠券组，领取和使用优惠券
+- 订单报表功能：用户能够下载商店或者全局的订单报表
 
 ### **2.3 用户特征**
 
@@ -75,10 +79,10 @@
 
 ### **2.4 约束**
 
-- 高阶语言要求：前端使用TypeScript+html+css进行开发，后端使用Java进行开发
+- 高阶语言要求：前端使用`Vue3`框架、`Vite`构建工具进行开发，后端使用`SpringBoot` + `JPA` + `MySQL`
 - 安全性考虑：
     - 支付安全：软件涉及到的支付功能要有安全性保障
-    - 账号安全：软件对用户的账号登录、注册信息要进行保护
+    - 账号安全：软件对用户的登录密码要加密传输
 
 ### **2.5 假设与依赖**
 
@@ -91,20 +95,39 @@
 ### **3.1.1 用户界面**
 
 - 用户界面以1920×1080的分辨率，100%缩放为标准设计。
+
 - 界面字体、图标、按钮等控件均来自Element-plus组件库。
+
 - GUI的布局标准与操作
-    - 用户注册界面：界面顶部左对齐显示标题“创建一个新的账户”。界面上显示昵称、身份、注册手机号、地址、密码和确认密码输入框，其中身份输入框通过下拉菜单选择顾客、管理人员或商家。
+    
+    - 登录界面：界面中心有登录界面主要内容的卡片，卡片内有用户手机号、密码的输入框
+    
+    - 注册界面：界面顶部左对齐显示标题“创建一个新的账户”。界面上显示昵称、身份、注册手机号、地址、密码和确认密码输入框，其中身份输入框通过下拉菜单选择顾客、管理人员或商家。
         - 对于管理人员的注册界面，还需要显示邀请码输入框。
         - 对于商家的注册界面，还需要显示邀请码和所属商店输入框，所属商店输入框通过下拉菜单选择所属商店。
-
+    
         界面底部显示“创建账户”和“去登录”按钮，其中“创建账户”按钮使用强调色。点击后可分别创建账户和跳转到登录界面。
-    - 用户主页：页面左栏显示个人信息，用户可以查看自己身份、头像等个人信息，页面中间显示修改密码页面，显示密码和确认密码输入框。个人信息右上角显示“修改个人信息”按钮，使用强调色，点击后显示修改页面，可以修改昵称和手机号，右上角显示“更新”按钮，点击完成更新
-    - 商店列表界面：界面顶部显示搜索框和搜索按钮，搜索按钮使用强调色，在搜索框中输入并点击搜索按钮可搜索商店。商店以矩形卡片方式顺序排列，宽度略小于界面宽度。对于每个卡片，左边显示正方形商店logo，右边从上到下依次显示商店名称、商店评分和商店简介，其中商店评分包括星级显示和数字显示。卡片中所有内容均左对齐。点击卡片可进入商店详情界面。页面右下角显示回顶部按钮，点击后即可回到页面顶部。
+    
+    - 用户信息页面：页面左栏显示个人信息，用户可以查看自己身份、头像等个人信息，页面中间显示修改密码页面，显示密码和确认密码输入框。个人信息右上角显示“修改个人信息”按钮，使用强调色，点击后显示修改页面，可以修改昵称和手机号，右上角显示“更新”按钮，点击完成更新
+    
+    - 广场界面：界面顶部显示搜索框和搜索按钮，搜索按钮使用强调色，在搜索框中输入并点击搜索按钮可搜索商店。商品和商店界面通过标签栏分为两个界面。商店以矩形卡片方式顺序排列，宽度略小于界面宽度。对于每个卡片，左边显示正方形商店logo，右边从上到下依次显示商店名称、商店评分和商店简介，其中商店评分包括星级显示和数字显示。卡片中所有内容均左对齐。点击卡片可进入商店详情界面。页面右下角显示回顶部按钮，点击后即可回到页面顶部。
         - 对于商场管理员的商店列表界面，所有商店卡片上方显示“创建商店”按钮，宽度与一般商店卡片相同，点击后可进入创建商店详情界面。
-    - 创建商店详情界面：界面顶部左对齐显示“创建商店”标题，下方从上到下依次显示商店名称和商店介绍输入框，以及商店logo上传框，可通过拖拽或点击上传图片，下方显示已上传的图片。界面右下角显示“确定创建”按钮，使用强调色，点击后，若输入的商店信息合法即可成功创建商店。
+    
+    - 创建商店界面：界面顶部左对齐显示“创建商店”标题，下方从上到下依次显示商店名称和商店介绍输入框，以及商店logo上传框，可通过拖拽或点击上传图片，下方显示已上传的图片。界面右下角显示“确定创建”按钮，使用强调色，点击后，若输入的商店信息合法即可成功创建商店。
+    
     - 商店详情界面：界面左侧边栏从上到下依次显示商店logo、商店名称、商店简介和商店评分，所有内容均居中。右侧主界面顶部显示搜索框和搜索按钮，搜索按钮使用强调色，在搜索框中输入并点击搜索按钮可搜索商店中的商品。下方左对齐显示标题“商品列表”。标题下方，商品以正方形卡片方式网格状排列。对于每个卡片，从上到下依次显示正方形商品缩略图、商品名称和商品价格，其中价格使用橙色加粗显示。卡片中所有内容均左对齐。点击卡片可进入商品详情界面。
         - 对于商家的商店详情界面，商品列表的第一位需要显示“添加商品”卡片，该卡片的大小与一般商品卡片相同，卡片上显示“添加商品”标题和加号图标。点击加号图标可打开右侧“创建商品”边栏。边栏中从上到下依次显示商品名称、商品简介、商品分类和商品库存输入框，以及商品展示图片上传框，可通过拖拽或点击上传图片，下方显示已上传的图片。所有商品卡片右下角还需要显示“更改库存”按钮，使用强调色，点击后弹出“更改库存”提示框，其中包含数字输入框和“生效更改”按钮。
+    
     - 商品详情界面：界面顶部需要一个卡片显示商店详情界面中的商店信息。下方需要一个商品详情卡片，卡片左边显示商品的展示图片，以跑马灯的形式自动播放，也可点击图片左右两侧的箭头切换图片。卡片右边从上到下依次左对齐显示商品名称、商品简介、商品价格和“立即购买”按钮，按钮使用强调色。
+    
+    - 订单列表界面：订单以垂直排列的列表形式展示。每一项表示一个订单的条目，订单条目内水平排布订单的详细信息。
+    
+    - 订单创建界面：订单创建界面分为三个部分，左上角显示商品的详情信息，右上角显示顾客的订单信息，下方显示优惠券列表和订单的价格
+    
+    - 评论界面：使用表单安排评论的输入信息，包括评分、文字评论输入框以及图片上传的卡片
+    
+    - 支付界面：屏幕中间显示一个跳转支付界面的按钮提示用户跳转到支付宝的页面
+    
 
 ### **3.1.2 硬件接口**
 
@@ -118,138 +141,200 @@
 ### **3.1.4 通信接口**
 
 - 软件需要使用Web浏览器进行前端渲染
-- 前端对服务器的请求是http请求
+- 前端对服务器使用HTTP REST API对服务端进行通信
 - 软件使用阿里云OSS服务实现文件存储
+- 支付宝后台通过系统提供的回调函数接口实现支付的确认
 
 ### **3.2 功能需求**
 
-- **3.2.1 用户注册 / 登录**
-    - **3.2.1.1 特性描述**
-      
-        用户进入应用若有账号则输入昵称、手机号等信息，点击“登录”即可登录账户；若无账号则可点击“去注册”按钮，输入信息，即可创建一个用户。
-        
-        优先级=高
-        
-    - **3.2.1.2 刺激 / 相应序列**
-      
-      
-        | 刺激 | 响应 |
-        | --- | --- |
-        | 用户输入信息 | 系统读取输入信息，并判断是否合法 |
-        | 用户点击“登录” | 系统进入相应用户界面 |
-        | 用户点击“去注册” | 系统进入新用户注册界面 |
-    - **3.2.1.3 相关功能需求**
-      
-      
-        | 功能 | 详细需求描述 |
-        | --- | --- |
-        | 用户输入手机号等信息 | 系统允许用户输入手机号、密码等信息并保证格式合法 |
-        | 用户确定账号身份 | 系统允许用户选择账号身份，对账号身份进行检测，给予用户不同的权限 |
-        | 用户输入邀请码和所属商店 | 商家、商场管理人员等需依赖邀请码注册，以防止无关人员恶意注册，保证商店经营安全 |
+#### 3.2.1 用户账户管理功能
 
-- **3.2.2 用户查看 / 修改个人信息**
-    - **3.2.2.1 特性描述**
-      
-        用户登陆后进入个人主页，可以查看、修改个人信息，也可以修改账户密码
-        
-        优先级=中
-        
-    - **3.2.2.2 刺激 / 相应序列**
-      
-      
-        | 刺激 | 响应 |
-        | --- | --- |
-        | 用户登录 | 系统进入相应用户界面 |
-        | 用户输入密码、确认密码 | 系统读取输入信息，并判断是否合法 |
-        | 用户点击“更新” | 系统更新用户密码 |
-        | 用户点击“修改个人信息” | 系统进入修改个人信息界面 |
-        | 用户输入昵称、手机号 | 系统读取输入信息，并判断是否合法 |
-        | 用户点击“更新” | 系统更新个人信息 |
-    - **3.2.2.3 相关功能需求**
-      
-      
-        | 功能 | 详细需求描述 |
-        | --- | --- |
-        | 用户登录后查看个人信息 | 系统监测用户账号身份，为用户展示昵称、手机号、头像等个人信息，提供修改个人信息、修改密码入口 |
-        | 用户输入昵称、手机号等信息 | 系统允许用户输入昵称、手机号等信息并保证合法 |
-        | 用户输入密码 | 系统允许用户输入密码并保证格式合法 |
+- **3.2.1.1 特性描述**
+  
+    用户可以注册账户、登录、修改个人信息等
+    
+    优先级=高
+    
+- **3.2.1.2 刺激 / 相应序列**
+  
+  
+    | 刺激 | 响应 |
+    | --- | --- |
+    | 用户点击“登录” | 系统进入相应用户界面 |
+    | 用户点击“注册” | 系统进入新用户注册界面 |
+    | 用户点击“更新个人信息” | 系统向用户返回更改成功或失败的消息 |
+- **3.2.1.3 相关功能需求**
+  
+  
+    | 功能 | 详细需求描述 |
+    | --- | --- |
+    | 用户输入手机号等信息 | 系统允许用户输入手机号、密码等信息并保证格式合法 |
+    | 用户确定账号身份 | 系统允许用户选择账号身份，对账号身份进行检测，给予用户不同的权限 |
+    | 用户输入邀请码和所属商店 | 商家、商场管理人员等需依赖邀请码注册，以防止无关人员恶意注册，保证商店经营安全 |
 
-- **3.2.3 创建商店**
-    - **3.2.3.1 特性描述**
-      
-        当商场管理人员想要创建一个全新的商店时，可以在商店管理点击“创建商店”的按钮，录入商店的名字、描述、Logo后，即可创建一个新的商店。
-        
-        优先级=中
-        
-    - **3.2.3.2 刺激 / 响应序列**
-      
-      
-        | 刺激 | 响应 |
-        | --- | --- |
-        | 商店管理人员点击“创建商店” | 系统进入创建商店页面 |
-        | 商店管理人员输入商店相关信息 | 系统读取输入信息，并判断是否合法 |
-    - **3.2.3.3 相关功能需求**
-      
-      
-        | 功能 | 详细需求描述 |
-        | --- | --- |
-        | 商店相关人员创建商店 | 系统监测用户账号身份为商家，则提供“创建商店”按钮 |
-        | 商家创建商店信息 | 系统允许商家输入商店名称、LOGO等信息，并保证商店信息合法。 |
-- **3.2.4 商品管理**
-    - **3.2.4.1 特性描述**
-      
-        商家进入自己的商店，可以点击“添加商品”按钮，输入商品名称、图片等信息，即可创建商品。在商品页可以修改商品信息
-        
-        优先级 = 中
-        
-    - **3.2.4.2 刺激 / 相应序列**
-      
-      
-        | 刺激 | 响应 |
-        | --- | --- |
-        | 商店管理人员点击“添加商品”按钮 | 系统进入 |
-        | 商店管理人员输入商品相关信息 | 系统读取输入信息，并判断是否合法 |
-        | 商店管理人员上传商品图片 | 系统向后台传入图片信息 |
-        | 商店管理人员点击“添加库存”按钮 | 系统为用户提供修改库存的接口 |
-    - **3.2.4.3 相关功能需求**
-      
-      
-        | 功能 | 详细需求描述 |
-        | --- | --- |
-        | 商家创建商品 | 系统监测用户身份为商家则允许用户创建商品。允许用户输入商品相关信息，并保证信息合法。允许用户上传商品图片。 |
-        | 商家管理商品 | 系统系统监测用户身份为商家则允许用户修改商品信息，修改商品库存。 |
-- **3.2.5 查看商店 / 商品**
-    - **3.2.5.1 特性描述**
-      
-        所有用户可以查看商店列表, 点击列表中的商店进入商店详情界面。
-        
-        优先级 = 中
-        
-    - **3.2.5.2 刺激 / 相应序列**
-      
-      
-        | 刺激 | 响应 |
-        | --- | --- |
-        | 用户登录 | 系统进入商店列表页 |
-        | 用户点击“搜索” | 系统遍历商店列表，筛选出满足条件的商店 |
-        | 用户点击商店 | 系统进入商店详情页，展示商品列表 |
-        | 用户点击“搜索” | 系统遍历商品列表，筛选出满足条件的商品 |
-        | 用户点击商品 | 系统进入商品详情页，展示商品详情 |
-        | 用户点击“回顶部” | 系统返回商店 / 商品列表顶部 |
-    - **3.2.5.3 相关功能需求**
-      
-      
-        | 功能 | 详细需求描述 |
-        | --- | --- |
-        | 用户登录后查看商店 | 系统监测用户账号身份，为顾客展示商店列表；为商店管理人员提供创建商店入口。在商店列表中显示商店名称、LOGO、简介、评分等信息。 |
-        | 用户查看商品 | 系统监测用户账号身份，为顾客展示商品列表；为商店管理人员提供添加商品入口。在商店详情页中显示商品名称、图片、价格、简介等信息。用户点击商品后进入商品详情页。 |
-        | 用户搜索商店 / 商品 | 系统读取用户在搜索栏中的输入内容，遍历商店 / 商品列表，筛选出满足条件的商店 / 商品，展示列表。 |
+#### 3.2.2 商品商店浏览功能
+
+- **3.2.2.1 特性描述**
+
+    用户可以浏览商店列表，并浏览商店下的商品信息
+
+    用户也可以浏览所有商品，并通过关键词搜索、分类筛选、排序等方式快速找到所需商品
+
+    优先级=高
+
+- **3.2.2.2 刺激 / 相应序列**
+
+    | 刺激                       | 响应                                 |
+    | -------------------------- | ------------------------------------ |
+    | 用户选择商品标签           | 系统展示商品广场页面                 |
+    | 用户选择商店标签           | 系统展示商店列表页面                 |
+    | 用户点击商店卡片           | 系统跳转到商店的商品列表页面         |
+    | 用户点击商品卡片           | 系统跳转到此商品的详细页面           |
+    | 用户设置搜索条件并点击搜索 | 系统返回对应搜索条件和顺序的商品列表 |
+    | 用户点击翻页               | 商品列表翻页或者跳转到对应页         |
+
+- **3.2.2.3 相关功能需求**
+
+    | 功能             | 详细需求描述                                                 |
+    | ---------------- | ------------------------------------------------------------ |
+    | 用户浏览商品     | 商品卡片要包含商品的缩略图、名称、价格等信息。系统要为用户提供搜索的方式检索商品，商品列表需要分页进行展示。商品列表需要根据用户的喜好来调整展示的商品、展示的顺序。 |
+    | 用户设置搜索条件 | 系统允许用户通过关键词模糊查询、设置价格区间、选择商品类别和商品按价格排序的方式获得搜索结果 |
+    | 用户浏览商店     | 商店卡片要包含商店Logo、名称、简介、评分等信息。             |
+
+#### 3.2.3 商品详情页
+
+- **3.2.3.1 特性描述**
+
+    展示商品详细信息，包括价格、规格、图片、用户评价等，帮助用户做出购买决策
+
+    优先级=高
+
+- **3.2.3.2 刺激 / 相应序列**
+
+    | 刺激                   | 响应                     |
+    | ---------------------- | ------------------------ |
+    | 用户选择商品介绍标签   | 系统展示商品的介绍图片流 |
+    | 用户选择商品评论区标签 | 系统展示商品评论区       |
+
+- **3.2.3.3 相关功能需求**
+
+    | 功能                   | 详细需求描述                                                 |
+    | ---------------------- | ------------------------------------------------------------ |
+    | 用户浏览商品的详细信息 | 商品详细信息页要包括商品所属商店的信息、商品名称、库存、价格、评分、商品详情图片、评论区等信息 |
+
+#### 3.2.4 订单功能
+
+- **3.2.4.1 特性描述**
+
+    用户可以对满意的商品进行下单并支付，对订单进行一系列确认，最终对订单做出评价
+
+    优先级=高
+
+- **3.2.4.2 刺激 / 相应序列**
+
+    | 刺激                   | 响应                                           |
+    | ---------------------- | ---------------------------------------------- |
+    | 用户点击立即购买       | 系统跳转到结算页                               |
+    | 用户选择优惠券         | 系统返回使用优惠券后的商品价格                 |
+    | 用户点击下单           | 系统创建订单并跳转到支付页                     |
+    | 用户点击返回           | 系统放弃创建订单并返回之前的界面               |
+    | 用户点击跳转至支付页面 | 系统新建支付标签页                             |
+    | 用户支付               | 系统显示支付成功或失败的消息，并返回之前的页面 |
+    | 用户点击已发货         | 订单状态显示为已发货                           |
+    | 用户点击已收货         | 订单状态显示为已收货                           |
+    | 用户点击评价订单       | 系统跳转到评价页面                             |
+
+- **3.2.4.3 相关功能需求**
+
+    | 功能             | 详细需求描述                                                 |
+    | ---------------- | ------------------------------------------------------------ |
+    | 用户下订单       | 顾客可以创建订单，创建订单的时候可以选择订单的提货方式、联系方式、商品数量，并且随后可以支付订单、确认收货<br />而商家可以对自己商店的订单进行发货的确认 |
+    | 用户确认订单收货 | 字面意思                                                     |
+    | 用户评价订单     | 顾客可以对订单进行评价，评价内容包括评分、文字评价、图片评价 |
+    | 用户使用优惠券   | 用户使用优惠券后的优惠价格应该有提示。用户可以叠加使用优惠券 |
+    | 用户确认订单发货 | 商家可以在用户支付订单后确认订单发货                         |
+    | 用户确认订单收货 | 顾客可以在商家发货后确认订单收货                             |
+    | 支付             | 用户需要通过支付宝进行支付，系统需要支持支付宝支付           |
+
+#### 3.2.5 商品商店管理功能
+
+- **3.2.5.1 特性描述**
+
+    商家可以管理其所在商店，包括创建商品等功能
+
+    商城管理人员可以创建商店
+
+    优先级=高
+
+- **3.2.5.2 刺激 / 相应序列**
+
+    | 刺激                  | 响应                                                      |
+    | --------------------- | --------------------------------------------------------- |
+    | 用户点击创建商店/商品 | 系统跳转创建商店/商品界面                                 |
+    | 用户点击创建商店/商品 | 系统对合法的商店/商品信息进行创建，对不合法的信息做出提示 |
+    | 用户点击更改库存      | 系统弹出修改库存的弹窗                                    |
+    | 用户点击确认更改      | 系统接受更改并且关闭弹窗                                  |
+
+- **3.2.5.3 相关功能需求**
+
+    | 功能     | 详细需求描述                                                 |
+    | -------- | ------------------------------------------------------------ |
+    | 创建商店 | 商店的信息包括名称、商店Logo、商店简介等信息。系统只接受合法的信息 |
+    | 创建商品 | 商品的信息包括名称、商品简介、商品展示图、商品详情图等信息。系统只接受合法的信息，图片数量要大于等于2 |
+    | 更改库存 | 用户可以更改商品的库存，库存应该是0到999之间的整数           |
+
+#### 3.2.6 优惠券功能
+
+- **3.2.6.1 特性描述**
+
+    用户可以创建优惠券、领取和使用优惠券
+
+    优先级=中
+
+- **3.2.6.2 刺激 / 相应序列**
+
+    | 刺激                 | 响应                                   |
+    | -------------------- | -------------------------------------- |
+    | 用户点击领取优惠券   | 优惠券被领取，系统显示已领取           |
+    | 用户点击创建优惠券组 | 系统显示创建优惠券的弹窗               |
+    | 用户确认创建优惠券组 | 系统根据用户输入的优惠券组信息就行创建 |
+
+- **3.2.6.3 相关功能需求**
+
+    | 功能         | 详细需求描述                                                 |
+    | ------------ | ------------------------------------------------------------ |
+    | 发布优惠券组 | 门店工作人员能发布本门店的优惠券组，经理可以发布全局的优惠券组。优惠券组分为满减券和蓝鲸券，满减券需要设置满减门槛和金额，蓝鲸券根据订单价格确定折扣 |
+    | 浏览优惠券   | 用户可以浏览所有的优惠券组，并且可以通过筛选条件筛选出想浏览的优惠券组。优惠券组需要包括优惠券类型、所属商店或全局、满减门槛和金额、蓝鲸券折扣、领取进度等信息 |
+    | 领取优惠券   | 顾客可以领取优惠券                                           |
+
+#### 3.2.7 订单报表功能
+
+- **3.2.7.1 特性描述**
+
+    用户能够下载商店或者全局的订单报表
+
+    优先级=低
+
+- **3.2.7.2 刺激 / 相应序列**
+
+    | 刺激                 | 响应                          |
+    | -------------------- | ----------------------------- |
+    | 用户点击下载订单报表 | 系统向浏览器返回报表excel表格 |
+
+- **3.2.7.3 相关功能需求**
+
+    | 功能             | 详细需求描述                                                 |
+    | ---------------- | ------------------------------------------------------------ |
+    | 用户下载订单报表 | 门店工作人员可以下载其所在商店的报表，经理可以下载全局的订单报表 |
+
 
 ### **3.3 非功能需求**
 
 ### **3.3.1 安全性**
 
-系统需要具备较高的安全性，保护用户的个人信息和交易数据不被泄露或篡改，防范各类网络攻击。
+系统需要保护用户的个人信息和交易数据不被泄露或篡改，用户的密码信息需要加密传输。
+
+对于前端的请求，需要实现接口鉴权，只允许身份正确的用户访问后端提供的服务
 
 ### **3.3.2 可维护性**
 
@@ -270,7 +355,8 @@
 ### **3.3.6 约束**
 
 - **技术约束：** 项目要求使用特定的技术栈或框架进行开发，以保持一致性和统一性。
-- **时间和预算约束：** 项目可能受限于时间和预算，需要在限定的时间和资源内完成开发、测试和上线，因此需要合理规划项目进度和资源分配。
+- **人员约束：**项目开发者对使用的框架和技术栈并不熟悉
+- **时间和预算约束：** 项目受限于时间和预算，需要在限定的时间和资源内完成开发、测试，因此需要合理规划项目进度和资源分配。
 
 ### **3.4 数据需求**
 
