--- a/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
+++ b/文档lab3-需求规格说明书/文档Lab03-需求规格说明书 fb3cf22096d84d87b7dc7e85f773c0ce.md
@@ -399,20 +399,73 @@
 | rating | float | 商店商品平均评价（所有评价平均数） |
 - 商品(item)
 
-| 字段 | 类型 | 备注 |
-| --- | --- | --- |
+| 字段 | 类型                                         | 备注 |
+| --- |--------------------------------------------| --- |
 | id | unique identifier & not null & primary key | 商品id |
-| name | varchar(31) & not null | 商品名称 |
-| description | varchar(255) | 商店简介 |
-| price | float & not null | 商品价格 |
-| rating | float | 商品评价 |
-| store_id | int | 归属商店的id |
-| category | String  | 商品分类 |
-| inventory | int | 商品库存 |
+| name | varchar(31) & not null                     | 商品名称 |
+| description | varchar(255)                               | 商店简介 |
+| price | float & not null                           | 商品价格 |
+| rating | float                                      | 商品评价 |
+| store_id | int                                        | 归属商店的id |
+| category | Enum CategoryEnum                          | 商品分类 |
+| inventory | int                                        | 商品库存 |
+- 订单(order)
 
+| 字段          | 类型                                         | 备注         |
+|-------------|--------------------------------------------|------------|
+| id          | unique identifier & not null & primary key | 订单id       |
+| item_id     | int & not null                             | 订单商品id     |
+| user_id     | int & not null                             | 订单用户所属id   |
+| store_id    | int & not null                             | 订单所属商店id   |
+| coupons_ids | List<Integer>                              | 订单使用的优惠券id |
+| status      | Enum OrderStatus                           | 订单状态       |
+| delivery    | var char                                   | 订单送达       |
+| price       | float & not null                           | 订单价格       |
+| quantity    | int & not null                             | 商品数量       |
+| createTime  | Date & not null                            | 订单创建时间     |
+| sendTime    | Date & not null                            | 订单发货时间     |
+| receiveTime | Date & not null                            | 订单收货时间     |
+
+- 优惠券组(CouponGroup)
+
+| 字段          | 类型                                         | 备注         |
+|-------------|--------------------------------------------|------------|
+| id          | unique identifier & not null & primary key | 优惠券组id     |
+| type        | Enum CouponTypeEnum                        | 优惠券组类型     |
+| count       | int & not null                             | 优惠券组发布数量   |
+| store_id    | int & not null                             | 优惠券组所属商店id |
+| threshold   | float & not null                           | 优惠券组使用门槛   |
+| reduction   | float & not null                           | 优惠券组优惠额度   |
+| inventory   | int & not null                             | 优惠券组现有库存   |
+
+- 优惠券(Coupon)
+
+| 字段        | 类型                                         | 备注       |
+|-----------|--------------------------------------------|----------|
+| id        | unique identifier & not null & primary key | 优惠券id    |
+| user_id   | int & not null                             | 优惠券类型    |
+| group_id  | int & not null                             | 所属优惠券组id |
+| store_id  | int & not null                             | 所属商店id   |
+| type      | Enum CouponTypeEnum                        | 优惠券类型    |
+| threshold | float & not null                           | 优惠券使用门槛  |
+| reduction | float & not null                           | 优惠券优惠额度  |
+| used      | boolean                                    | 优惠券是否使用  |
+
+- 评论(Comment)
+
+| 字段         | 类型                                         | 备注       |
+|------------|--------------------------------------------|----------|
+| id         | unique identifier & not null & primary key | 评论id     |
+| content    | var_char                                   | 评论内容     |
+| item_id    | int & not null                             | 评论所属商品id |
+| user_id    | int & not null                             | 评论发表用户id |
+| order_id   | int & not null                             | 评论所属订单id |
+| rating     | float & not null                           | 评论评分     |
+| createTime | Date                                       | 评论发布时间   |
 ### **3.4.2 默认数据**
 
 - 无
+
 
 ### **3.4.3 数据格式要求**
 
