--- a/文档Lab06-详细设计文档/文档Lab06-详细设计文档 d145ad1510a54d91bb4a543a9d99dad1.md
+++ b/文档Lab06-详细设计文档/文档Lab06-详细设计文档 d145ad1510a54d91bb4a543a9d99dad1.md
@@ -706,8 +706,8 @@ imagebl模块的职责及接口参见软件系统结构描述文档。
 
 **客户端的开发包图**
 
-![客户端开发包图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/%25E5%25AE%25A2%25E6%2588%25B7%25E7%25AB%25AF%25E5%25BC%2580%25E5%258F%2591%25E5%258C%2585%25E5%259B%25BE.drawio.svg)
+参考体系结构设计文档4.1节的客户端开发包图
 
 **服务端的开发包图**
 
-![服务端开发包图.drawio.svg](%E6%96%87%E6%A1%A3Lab06-%E8%AF%A6%E7%BB%86%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3%20d145ad1510a54d91bb4a543a9d99dad1/%25E6%259C%258D%25E5%258A%25A1%25E7%25AB%25AF%25E5%25BC%2580%25E5%258F%2591%25E5%258C%2585%25E5%259B%25BE.drawio.svg)
+参考体系结构设计文档4.1节的服务端开发包图
